--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/web_ban_sach
 spring.datasource.username=root
 spring.datasource.password=12345
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#auto create table
+spring.jpa.hibernate.ddl-auto = update
