--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/web_ban_sach
 spring.datasource.username=root
 spring.datasource.password=12345
-
-
-#auto create table
-spring.jpa.hibernate.ddl-auto = update
+#auto table
+spring.jpa.hibernate.ddl-auto = none
+#c?u hình email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=loog5277@gmail.com
+spring.mail.password=vqabvcgsgomlvxom
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
